--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "react-dom": "^16.2.0",
     "react-scripts": "1.0.16"
   },
-  "homepage": ".",
+  "homepage": "https://myatniy.github.io/react-opentok-group-video-call-test",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
